--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,19 +11,19 @@
 <meta name="keywords" content="" />
 
 
-<meta property="og:url" content="http://localhost:1313/404.html">
+<meta property="og:url" content="https://cnode.phd/404.html">
   <meta property="og:site_name" content="cnode.phd">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="cnode.phd">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="http://localhost:1313/images/share.png">
+    <meta property="og:image" content="https://cnode.phd/images/share.png">
 
 
 
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="http://localhost:1313/images/share.png">
+  <meta name="twitter:image" content="https://cnode.phd/images/share.png">
   <meta name="twitter:title" content="404 Page not found">
   <meta name="twitter:description" content="cnode.phd">
 
@@ -32,7 +32,7 @@
 
   <meta itemprop="name" content="404 Page not found">
   <meta itemprop="description" content="cnode.phd">
-  <meta itemprop="image" content="http://localhost:1313/images/share.png">
+  <meta itemprop="image" content="https://cnode.phd/images/share.png">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
