--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           </time>
         </i>
       </span>
-      <a href="https://cnode.phd/cyclotomic_fields/">Cyclotomic Fields</a>
+      <a href="https://cnode.phd/cyclotomic_fields/">Cyclotomic Fields and LatticeFold</a>
     </li>
     
     <li>
