--- a/cyclotomic_fields/index.html
+++ b/cyclotomic_fields/index.html
@@ -239,9 +239,9 @@
 <h2 id="why-cyclotomic-fields">Why Cyclotomic Fields?</h2>
 <p>While many snarks, digital signatures, and encryption are based on the computational hardness of <a href="https://en.wikipedia.org/wiki/Discrete_logarithm">the discrete log problem</a>, Lattice constructions are based on a different class of computationally hard problem, called <a href="https://en.wikipedia.org/wiki/Short_integer_solution_problem">Short Integer Solution</a> (SIS) problems.</p>
 <p>According to the Wikipedia page, there are different variants of the SIS problem, notably the Ring SIS (&ldquo;R-SIS&rdquo;) and Module SIS (&ldquo;M-SIS&rdquo;) problems, which deal with Cyclotomic fields / rings.</p>
-<p><img src="../assets/variants_on_sis.png" alt="sis_variants"></p>
+<p><img src="/images/variants_on_sis.png" alt="sis_variants"></p>
 <p>LatticeFold references the M-SIS problem and seems to be constructed on-top of it.</p>
-<p><img src="../assets/module_sis.png" alt="lattice_fold_msis"></p>
+<p><img src="/images/module_sis.png" alt="lattice_fold_msis"></p>
 <p>Additionally, we can see many of the codebases related to latticefold and Ajtai contain code for cyclotomic fields / rings, like from <a href="https://github.com/NethermindEth/latticefold/tree/main/cyclotomic-rings">Nethermind</a> and <a href="https://github.com/harnesslabs/cyclotomic">Autoparallel</a>.</p>
 <h2 id="not-your-grandmas-numbers">Not your grandma&rsquo;s numbers</h2>
 <p>While extension fields and cyclotomic fields polynomials, not numbers, they do behave like numbers in a lot of very important ways!</p>
