--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           </time>
         </i>
       </span>
-      <a href="https://cnode.phd/folding_with_protogalaxy/">Tree-Folding part 1</a>
+      <a href="https://cnode.phd/folding_with_protogalaxy/">Tree-Folding &amp; Protogalaxy</a>
     </li>
     
   </ul>
