--- a/demystifying_formal_zksnark_jargon/index.html
+++ b/demystifying_formal_zksnark_jargon/index.html
@@ -210,7 +210,40 @@
     height: 2rem;
     width: auto;
   }
-</style> </head>
+</style> 
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/katex@0.16.25/dist/katex.min.css"
+  integrity="sha384-WcoG4HRXMzYzfCgiyfrySxx90XSl2rxY5mnVY5TwtWE6KLrArNKn0T/mOgNL0Mmi"
+  crossorigin="anonymous"
+>
+<script
+  defer
+  src="https://cdn.jsdelivr.net/npm/katex@0.16.25/dist/katex.min.js"
+  integrity="sha384-J+9dG2KMoiR9hqcFao0IBLwxt6zpcyN68IgwzsCSkbreXUjmNVRhPFTssqdSGjwQ"
+  crossorigin="anonymous">
+</script>
+<script
+  defer
+  src="https://cdn.jsdelivr.net/npm/katex@0.16.25/dist/contrib/auto-render.min.js"
+  integrity="sha384-hCXGrW6PitJEwbkoStFjeJxv+fSOOQKOPbJxSfM6G5sWZjAyWhXiTIIAmQqnlLlh"
+  crossorigin="anonymous">
+</script>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    renderMathInElement(document.body, {
+      delimiters: [
+        {left: '\\[', right: '\\]', display: true},   
+        {left: '$$', right: '$$', display: true},     
+        {left: '$', right: '$', display: false},      
+        {left: '\\(', right: '\\)', display: false},  
+      ],
+      throwOnError : false
+    });
+  });
+</script>
+  
+</head>
 
 <body>
   <header><a href="/" class="title">
@@ -247,7 +280,8 @@
 <p>While statistical witness extended emulation is related to the &ldquo;ARK&rdquo; (argument of knowledge) part of our <em>zkSNARK</em>, this property <em>Special Honest Verifier Zero-Knowledge</em> is related to the <em>ZK</em> part; ZK being a popular buzzword that is rightfully associated with <em>privacy</em>. To dumb it down to an offensive degree- this is how we know our construction is&hellip; private.</p>
 <p>From the paper, we see:</p>
 <p><img src="/images/special_honest_verifier_.png" alt="Special Honest Verifier Zero-Knowledge"></p>
-<p>Notice how they present an <em>equation</em> with the form $Pr[&hellip;] = Pr[&hellip;]$. The property is achieved for our scheme if these two <em>probabilities</em> are <em>equal</em>. Notice how the two sides have these different terms:</p>
+<p>Notice how they present an <em>equation</em> with the form </p>
+$$Pr[...] = Pr[...]$$<p>. The property is achieved for our scheme if these two <em>probabilities</em> are <em>equal</em>. Notice how the two sides have these different terms:</p>
 <p><img src="/images/s_and_pv.png" alt="S and P,V"></p>
 <p>and both start out with $(u,w,p) \leftarrow A(1^{\lambda})$. To understand the difference, recall from proof systems that you may be familiar with that proof consist of <em>transcripts</em> of messages, sent between a prover and verifier. These two terms describe different ways that these transcripts might hypothetically be generated.</p>
 <p>The difference between $\langle P(w, u) , V(u) \rangle$ and $S(u, p)$ is that the former is a normal interaction between a prover and verifier (resulting in a transcript), and the latter is an algorithm called a <em>simulator</em> (also resulting in a transcript).</p>
